# tsv-resolver

./: Dockerfile  README.md
client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: index.tsx
client/src/app/: App.tsx
client/src/app/styles/: index.css  reset.css  var.css
client/src/pages/Main/ui/: Main.module.css  index.tsx
client/src/shared/lib/: index.ts  setupVideo.ts
client/src/shared/ui/: index.ts
client/src/shared/ui/Button/: Button.module.css  index.tsx
client/src/shared/ui/Input/: Input.module.css  index.tsx
server/: Cargo.toml
server/src/: cli.rs  main.rs  shared_context.rs  twitch_kraken.rs  vod_storage.rs
server/src/config/: middleware.rs
server/src/handlers/: cloudfront_proxy.rs  get_vod.rs  mod.rs
