[package]
name = "tsv-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "./src/main.rs"

[dependencies]
reqwest = "0.11.13"
url = { version = "2.3.1", features = ["serde"] }
tokio = { version = "1.23.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
anyhow = "1.0.68"
actix-web = "4.2.1"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"] }
moka = {version = "0.12.1", features = ["future"]}
actix-cors = "0.6.5"
actix-files = "0.6.2"

[profile.release]
strip = "debuginfo"
